[gd_scene load_steps=6 format=3 uid="uid://cvpcfjfq7n1mk"]

[ext_resource type="Script" path="res://Assets/Scripts/Switch.gd" id="1_1wp7m"]
[ext_resource type="Texture2D" uid="uid://boglxffgxtovn" path="res://Assets/Art/puzzle_tileset.png" id="1_17xg0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjnpa"]
size = Vector2(16, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_plcd0"]
atlas = ExtResource("1_17xg0")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g8ux"]
atlas = ExtResource("1_17xg0")
region = Rect2(48, 0, 16, 16)

[node name="Switch" type="Area2D" groups=["switches"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_1wp7m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_tjnpa")

[node name="ButtonPressed" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_plcd0")

[node name="ButtonNotPressed" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_1g8ux")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
